fixed the share spacing [Finished #153064595] and fixed the + on the 100 [Finished #153074707]

--- a/app/assets/stylesheets/_refer.scss
+++ b/app/assets/stylesheets/_refer.scss
@@ -45,7 +45,7 @@
           border: 1px solid $gray-medium;
           height: 40px;
           line-height: 40px;
-          overflow-x: scroll; // update this to somethign better
+          overflow-x: hidden; // update this to somethign better
           text-align: center;
           span {
             color: $gray-lightest;
@@ -290,7 +290,7 @@
     .hero {
       .copy-link-wrapper {
         margin: 0;
-        width: 340px;
+        width: 412px;
         .copy-link {
           text-align: left;
         }
